# AlbumRipper

./: .gitignore  README.md  buildAndRun.sh  io.github.Ethanscharlie.albumripper.json  io.github.Ethanscharlie.ytmusicripper.json  meson.build  org.hadley.ytmusicripper.json  python3-requests.json  requirements.txt
data/: io.github.Ethanscharlie.albumripper.desktop.in  io.github.Ethanscharlie.albumripper.gschema.xml  io.github.Ethanscharlie.albumripper.metainfo.xml.in  io.github.Ethanscharlie.albumripper.service.in  io.github.ethanscharlie.ytmusicripper.desktop.in  io.github.ethanscharlie.ytmusicripper.metainfo.xml.in  meson.build  org.hadley.ytmusicripper.desktop.in  org.hadley.ytmusicripper.gschema.xml  org.hadley.ytmusicripper.metainfo.xml.in  org.hadley.ytmusicripper.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build  nl.po
src/: albumripper.gresource.xml  albumripper.in  main.py  meson.build  queue_item.py  queue_item.ui  window.py  window.ui  ytmusicdl.py  ytmusicripper.gresource.xml  ytmusicripper.in
